--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -205,6 +205,20 @@ h3 a
 
 .text-dimmed
   opacity: 0.4
+
+.collection
+  -webkit-border-radius: 2px
+  border-radius: 2px
+  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+  -ms-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+  background: #fff
+  padding: 5px 8px
+  height: 180px
+  display: inline-block
+  &:hover
+    background: #f1f1f1
   
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
