committing some fixing for higher browse all performance and error in sorting

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -219,6 +219,39 @@ h3 a
   display: inline-block
   &:hover
     background: #f1f1f1
+
+.nav-pills
+  .active
+    color: #FFF
+    background-color: #6d4479
+  a
+    color: #6d4479
+    background-color: #eeeeee
+  li a:hover
+    background-color: #e3e3e3
+    color: #6d4479
+
+.comment-time
+  text-transform: uppercase
+  font-weight: bold
+  color: #b0b0b0
+
+a
+  &.author
+    font-weight: bold
+    color: #ba8fba
+    text-transform: capitalize
+    &:hover
+      color: #16a768
+  &.book-title
+    color: #16a768
+    font-weight: bold
+    text-transform: capitalize
+    &:hover
+      color: #ba8fba
+
+.activity-log
+  line-height: 11px
   
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
