--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -8,7 +8,10 @@
 = javascript_include_tag 'jquery/jquery.ui.position.js'
 = javascript_include_tag 'jquery/jquery.ui.menu.js'
 = javascript_include_tag 'jquery/jquery.ui.autocomplete.js'
-  
+
+= stylesheet_link_tag 'jquery/rating/jRating.jquery.css'
+= javascript_include_tag 'jquery/rating/jRating.jquery.js'
+    
 :javascript
   $(document).ready(function() {
         var cache;
