--- a/app/views/books/_booknames.html.haml
+++ b/app/views/books/_booknames.html.haml
@@ -17,4 +17,5 @@
     -if count != @names.length
       %b
         =I18n.t(:separator)
-= book_names_count_format(@id)
+%span
+  = book_names_count_format(@id)
