--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -22,7 +22,7 @@
     %b
       = I18n.t(:status)
     %br
-    = parse_collection_status(@collection.status)
+    = parse_collection_is_public(@collection.is_public)
     %br
     %br
     - if session["user_id"] == @collection.user_id
@@ -35,10 +35,10 @@
       = render :partial => "collections/rating", :locals => {:collection_rate => rate, :user_rate => @user_collection_rate, :col_id =>  @collection.id}
     = render :partial => "comments/index"
 
-    - if (@collection_books != '' && @total_number > 0)
+    - if (@collection_volumes != '' && @total_number > 0)
       .count
         = "Found #{pluralize(@total_number, I18n.t(:book))} "
-      - @collection_books.each do |ubh_vol|
+      - @collection_volumes.each do |ubh_vol|
         - @ubh_vol = ubh_vol
         - @vol = Volume.find_by_id(@ubh_vol.volume)
         - @title = Book.find_by_id(@vol.book_id).title
