book details read tab

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -253,6 +253,9 @@ a
 .activity-log
   line-height: 11px
   
+.alphabet
+  margin-top: 15px
+  
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
