--- a/app/views/books/_others.html.haml
+++ b/app/views/books/_others.html.haml
@@ -9,10 +9,12 @@
   //direction 0 moves left, direction 1 moves right
   function moveItems(direction, divname){
     var xmlhttp;
-    if (window.XMLHttpRequest){// code for IE7+, Firefox, Chrome, Opera, Safari
+    if (window.XMLHttpRequest){
+      // code for IE7+, Firefox, Chrome, Opera, Safari
       xmlhttp=new XMLHttpRequest();
     }
-    else{// code for IE6, IE5
+    else{
+      // code for IE6, IE5
       xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
     }
     xmlhttp.onreadystatechange=function(){
