--- a/app/views/books/_reviews.html.haml
+++ b/app/views/books/_reviews.html.haml
@@ -11,55 +11,55 @@
                          }
              }
       });
-  }
+    }
+    
     function show_replies(id) {
       $('#replies'+id).toggle();
-  }
+    }
   
-      function show_reply(id) {
+    function show_reply(id) {
       $('#open_reply'+id).toggle();
-  }
+    }
   
-      function open_comment(id) {
-       $('#comment'+id).toggle();
-       $('#abuse'+id).toggle();
-  }
+    function open_comment(id) {
+      $('#comment'+id).toggle();
+      $('#abuse'+id).toggle();
+    }
+  
     function confirmDelete(){
-    var r= confirm("#{I18n.t(:delete_comment_confirm)}");
-    return r;
-  }
+      var r= confirm("#{I18n.t(:delete_comment_confirm)}");
+      return r;
+    }
   
-  function loadXMLDoc(direction)
-  {
-  var total_number_of_comments = document.getElementById("total_comments");
-  var limit = parseInt("#{LIMIT_BOOK_COMMENTS}");
-  if (direction == 1){
-    start =start + 1;
-    }
-  else if (direction == 2){
-    start =start - 1;
-    }
-  var xmlhttp;
-  if (window.XMLHttpRequest)
-    {// code for IE7+, Firefox, Chrome, Opera, Safari
-    xmlhttp=new XMLHttpRequest();
-    }
-  else
-    {// code for IE6, IE5
-    xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-    }
-  xmlhttp.onreadystatechange=function()
-    {
-    if (xmlhttp.readyState==4 && xmlhttp.status==200)
-      {
-      document.getElementById("reviews").innerHTML=xmlhttp.responseText;
+    function loadXMLDoc(direction){
+      var total_number_of_comments = document.getElementById("total_comments");
+      var limit = parseInt("#{LIMIT_BOOK_COMMENTS}");
+      if (direction == 1){
+        start =start + 1;
       }
+      else if (direction == 2){
+        start =start - 1;
+      }
+      var xmlhttp;
+      if (window.XMLHttpRequest)
+      {
+        // code for IE7+, Firefox, Chrome, Opera, Safari
+        xmlhttp=new XMLHttpRequest();
+      }
+      else
+      {// code for IE6, IE5
+        xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+      }
+      xmlhttp.onreadystatechange=function()
+      {
+        if (xmlhttp.readyState==4 && xmlhttp.status==200)
+        {
+          document.getElementById("reviews").innerHTML=xmlhttp.responseText;
+        }
+      }  
+      xmlhttp.open("GET","/get_comments?start=" + start + "&id=#{params[:id]}",true);
+      xmlhttp.send();
     }
-
-  xmlhttp.open("GET","/get_comments?start=" + start + "&id=#{params[:id]}",true);
-  xmlhttp.send();
-  
-  }
     loadXMLDoc(0);
 
 #modal-container-4.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", :role => "dialog"}
@@ -76,7 +76,8 @@
 
 
 .reviews
-  %a#modal-4.btn.btn-primary.btn-sm.pull-right{"data-toggle" => "modal", :href => "#modal-container-4", :onclick => "loadformats('Comment', '');", :role => "button"} Write a review
+  %a#modal-4.btn.btn-primary.btn-sm.pull-right{"data-toggle" => "modal", :href => "#modal-container-4", :onclick => "loadformats('Comment', '');", :role => "button"} 
+    = "Write a review"
   %h3 
     = I18n.t(:reviews)
   %hr.clearfix
