--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -1,26 +1,38 @@
-.form
-  = form_for @collection, :html => {:multipart => true}, :builder => FormHelper::BHLFormBuilder do |f|
-    = validation_errors_for(@collection)
-    %ul
-      %li
-        = f.label :title, raw(t('title')), :class => 'required'
-      %li
-        = f.text_field :title, { :maxlength => 32 }
-      %li
-        = f.label :description, raw(t('description'))
-      %li
-        = f.text_area :description
-      %li
-        = f.check_box :is_public
-        = I18n.t(:public)
-      %li
-        - if(!(@collection.photo_name.blank?))
-          - @thumb = @collection.photo_name_url(:thumb)
-          = image_tag("#{@thumb}", :width => 150, :border => 0 , :id => "collection_photo")
-          = check_box_tag "delete_photo"
-          = I18n.t(:delete_photo)
-      %li
-        = f.file_field :photo_name
-        %fieldset
-      = f.submit I18n.t('submit_buton'), :class => "btn"
-      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
+.row.clearfix
+  .col-md-9.column.col-xs-offset-1
+    %fieldset
+      %legend
+        = @page_title
+      .form-horizontal
+        = validation_errors_for(@collection)
+        = form_for @collection, :html => {:multipart => true}, :builder => FormHelper::BHLFormBuilder do |f|
+          .form-group
+            = f.label :title, raw(t('title')), :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_field :title, :class => 'form-control'
+          .form-group
+            = f.label :description, raw(t('description')), :class => 'col-sm-2 control-label'
+            .col-sm-10
+              = f.text_area :description, :class => 'form-control', :name => "", :cols => "", :rows => ""
+          .form-group
+            %label{:class => 'col-sm-2 control-label'}
+              = I18n.t(:upload_collection_photo)
+            .col-sm-10
+              = f.file_field :photo_name, :class => "btn btn-default"
+              %p.help-block
+                = I18n.t(:collection_help_block)
+          .form-group
+            .col-sm-offset-2.col-sm-10
+              %div
+                %span.checkbox.pull-left
+                  %label
+                    = f.check_box :is_public
+                    = I18n.t(:public_collection)
+                    %i.fa.fa-unlock
+          .form-group
+            .col-sm-2
+            .col-sm-10
+              = f.submit I18n.t('submit_buton'), :class => "btn btn-default"
+              = f.submit I18n.t('clear_button'), :class => "btn btn-default", :type => "reset"
+
+     
