initial home page

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -252,7 +252,35 @@ a
 
 .activity-log
   line-height: 11px
-  
+
+.annotation
+  border: 1px solid rgba(0, 0, 0, 0.2)
+  border-radius: 6px
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+  background-clip: padding-box
+  padding: 10px
+  height: 180px
+  margin-bottom: 35px
+
+.alphabet
+  margin-top: 15px
+
+.home
+  .activity-log
+    line-height: 11px
+    font-size: 11px
+  .alert-info
+    color: #FFF
+    background-color: #6d4479
+    border-color: #6d4479
+  .collection
+    height: 220px
+    overflow: hidden
+    margin-right: 10px
+    img
+      margin-bottom: 10px
+      
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
