--- a/app/views/collections/_collection.html.haml
+++ b/app/views/collections/_collection.html.haml
@@ -4,7 +4,7 @@
     return r;
   }
 - if(collection.photo_name.blank?)
-  - @thumb = "/images_#{I18n.locale}/defaultCollection.jpg"
+  - @thumb = "/images_#{I18n.locale}/nocollection140.png"
 - else
   - @thumb = collection.photo_name_url(:thumb)
 
