--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -10,6 +10,10 @@
             .col-sm-10
               = f.text_field :email, { :class => "required form-control" }
           .form-group
+            = f.label :recaptcha, raw(t('recaptcha')), :class => 'required col-sm-2 control-label'
+            .col-sm-10
+              = recaptcha_tags(display: {theme: 'clean'})
+          .form-group
             .col-sm-2
             .col-sm-10
               = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
